[tool.poetry]
name = "iam-access-resources-filter"
version = "0.1.0"
description = ""
authors = ["Artem Udovyk <udovyk.a@konstankino.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
